 - [DS-122] Problems with repeatable metadata
 - [DS-116] File description not correct
 - [DS-92] Bitstream access rights inheritenc, editing in_archive items - ID: 1993036
 - [DS-81] Subscription not sent correctly - ID: 2667590
 - [DS-99] Non-admin user and admin menu options (1.5.1 XMUI only) - ID: 2353606
 - [DS-157] Ukrainian for DSpace 1.5.2 - JSPUI only (gone into google code)
 
(Paulo Jobim)
 - [DS-138] SF Patch [2655052] Authors re-ordered when item edited (xmlui)

(Larry Stone)
 - SF Patch [2621423] Add method to instrument Context's cache usage

(Bruc Liong / Xiang Kevin Li)
- [DS-48] shibboleth+dspace1.5.1 patch - ID: 2412723

1.5.1 final
===========

(Scott Philips)
- (Scott Phillips) Fixed bug where users could not finish registering nor reset 
  their password because the authentication method signatures were changed.
- Jay Paz (SF#1898241) Additional fixes to patch to enable reuse of methods.
- Added the ability to manage sessions with site wide alerts to prevent users from authenticating.
- Fixes a bug where the ability to edit an item durring workflow step 2 is not displayed.
- Jay Paz (SF#1898241) Add item Export from jspui and xmlui.
- Added easy support for google analytics statistics
- Added the ability for super admins to login as other users. 
- Added an activity viewer to the Control Panel

(Mark Diggory) 
- Fix for SF Bug #2082236 Subscription notification (sub-daily) no emails sent
- [2102580] William Hays: Duplicate Handle exception when replacing bitstreams
- [2102617] Sands Fish: X509Authentication fails to assign appropriate specialgroups
- (Sands Fish) Add "Select Primary Bitstream" functionality to submission workflow
- Guard against Community/Collection metadata having only whitespace characters 
  and eliminate cases where null pointer exceptions would be thrown
- Improve DSIndexer logic in both branches to support removal of items from index 
  when withdrawn from repository.