@@ -135,6 +135,7 @@
  - [DS-81] Subscription not sent correctly - ID: 2667590
  - [DS-99] Non-admin user and admin menu options (1.5.1 XMUI only) - ID: 2353606
  - [DS-157] Ukrainian for DSpace 1.5.2 - JSPUI only (gone into google code)
+ - [DS-186] NPE during edit of eperson in XMLUI
  
 (Paulo Jobim)
  - [DS-138] SF Patch [2655052] Authors re-ordered when item edited (xmlui)
